Added AJAX to append categories to the top menu bar
_top_bar now has a hook to be appended on
the AJAX for this is in app/assets/javascripts/application.js

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -16,39 +16,10 @@
       <li class="divider"></li>
       <li><a href="#">Main Item 2</a></li>
       <li class="divider"></li>
-      <li class="has-dropdown"><%= link_to "Categories", books_path %></a>
+      <li class="has-dropdown"><%= link_to "Categories", categories_path %></a>
 
-        <ul class="dropdown">
-          <li><a href="#">Arts & Photography (704,211)</a></li>
-          <li><a href="#">Biographies & Memoirs (566,291)</a></li>
-          <li><a href="#">Business & Investing (1,613,834)</a></li>
-          <li><a href="#">Calendars (1,587,826)</a></li>
-          <li><a href="#">Children's Books (1,061,351)</a></li>
-          <li><a href="#">Christian Books & Bibles (618,912)</a></li>
-          <li><a href="#">Comics & Graphic Novels (279,361)</a></li>
-          <li><a href="#">Computers & Technology (417,062)</a></li>
-          <li><a href="#">Cookbooks, Food & Wine (146,091)</a></li>
-          <li><a href="#">Crafts, Hobbies & Home (293,141)</a></li>
-          <li><a href="#">Education & Reference (4,053,612)</a></li>
-          <li><a href="#">Gay & Lesbian (41,935)</a></li>
-          <li><a href="#">Health, Fitness & Dieting (496,892)</a></li>
-          <li><a href="#">History (2,770,768)</a></li>
-          <li><a href="#">Humor & Entertainment (385,798)</a></li>
-          <li><a href="#">Law (453,198)</a></li>
-          <li><a href="#">Literature & Fiction (2,585,914)</a></li>
-          <li><a href="#">Medical Books (498,146)</a></li>
-          <li><a href="#">Mystery, Thriller & Suspense (216,460)</a></li>
-          <li><a href="#">Parenting & Relationships (113,923)</a></li>
-          <li><a href="#">Politics & Social Sciences (1,167,972)</a></li>
-          <li><a href="#">Professional & Technical (3,670,931)</a></li>
-          <li><a href="#">Religion & Spirituality (1,131,982)</a></li>
-          <li><a href="#">Romance (347,045)</a></li>
-          <li><a href="#">Science & Math (1,032,022)</a></li>
-          <li><a href="#">Science Fiction & Fantasy (227,053)</a></li>
-          <li><a href="#">Self-Help (228,912)</a></li>
-          <li><a href="#">Sports & Outdoors (225,412)</a></li>
-          <li><a href="#">Teen & Young Adult (218,244)</a></li>
-          <li><a href="#">Travel (356,521) </a></li>
+        <ul class="dropdown" id="categories_menu">
+          <!-- Ajax Automatically adds categories here -->
         </ul>
       </li>
       <li class="divider"></li>
