--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -28,7 +28,7 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="divider hide-for-small"></li>
-      <li class="has-dropdown"><a href="#">Your Account</a>
+      <li class="has-dropdown"><%= link_to "Accounts", customers_path %></a>
 
         <ul class="dropdown">
           <li><label>Dropdown Level 1 Label</label></li>
