--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -12,11 +12,11 @@
     <!-- Left Nav Section -->
     <ul class="left">
       <li class="divider"></li>
-      <li class="active"><%= link_to "Books", books_path %></li>
+      <li><%= link_to "Books", books_path %></li>
       <li class="divider"></li>
-      <li><a href="#">Main Item 2</a></li>
+      <li><%= link_to "Customers", customers_path %></li>
       <li class="divider"></li>
-      <li class="has-dropdown"><%= link_to "Categories", categories_path %></a>
+      <li class="has-dropdown"><%= link_to "Categories", categories_path %>
 
         <ul class="dropdown" id="categories_menu">
           <!-- Ajax Automatically adds categories here -->
@@ -28,39 +28,47 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="divider hide-for-small"></li>
-      <li class="has-dropdown"><%= link_to "Accounts", customers_path %></a>
 
-        <ul class="dropdown">
-          <li><label>Dropdown Level 1 Label</label></li>
-          <li class="has-dropdown"><a href="#" class="">Dropdown Level 1a</a>
+      <% if current_user %>
+        <li  class="has-dropdown">
+          <%= link_to current_user.first_name, customer_path(current_user) %>
+          <ul class="dropdown">
+            <li class="has-dropdown"><a href="#" class="">Dropdown Level 1a</a>
 
-            <ul class="dropdown">
-              <li><a href="#">Dropdown Level 2a</a></li>
-              <li><a href="#">Dropdown Level 2b</a></li>
-              <li class="has-dropdown"><a href="#">Dropdown Level 2c</a>
+              <ul class="dropdown">
+                <li><a href="#">Dropdown Level 2a</a></li>
+                <li><a href="#">Dropdown Level 2b</a></li>
+                <li class="has-dropdown"><a href="#">Dropdown Level 2c</a>
 
-                <ul class="dropdown">
-                  <li><a href="#">Dropdown Level 3a</a></li>
-                  <li><a href="#">Dropdown Level 3b</a></li>
-                  <li><a href="#">Dropdown Level 3c</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown Level 2d</a></li>
-              <li><a href="#">Dropdown Level 2e</a></li>
-              <li><a href="#">Dropdown Level 2f</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Dropdown Level 1b</a></li>
-          <li><a href="#">Dropdown Level 1c</a></li>
-          <li class="divider"></li>
-          <li><label>Dropdown Level 1 Label</label></li>
-          <li><a href="#">Dropdown Level 1d</a></li>
-          <li><a href="#">Dropdown Level 1e</a></li>
-          <li><a href="#">Dropdown Level 1f</a></li>
-          <li class="divider"></li>
-          <li><a href="#">See all &rarr;</a></li>
-        </ul>
-      </li>
+                  <ul class="dropdown">
+                    <li><a href="#">Dropdown Level 3a</a></li>
+                    <li><a href="#">Dropdown Level 3b</a></li>
+                    <li><a href="#">Dropdown Level 3c</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Dropdown Level 2d</a></li>
+                <li><a href="#">Dropdown Level 2e</a></li>
+                <li><a href="#">Dropdown Level 2f</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Dropdown Level 1b</a></li>
+            <li><a href="#">Dropdown Level 1c</a></li>
+            <li class="divider"></li>
+            <li><label>Dropdown Level 1 Label</label></li>
+            <li><a href="#">Dropdown Level 1d</a></li>
+            <li><a href="#">Dropdown Level 1e</a></li>
+            <li>
+              <%= link_to "Logout", logout_path %>
+            </li>
+          </ul>
+        </li>
+
+      <% else %>
+        <li><%= link_to "Sign Up", signup_path %></li>
+        <li class="divider"></li>
+        <li><%= link_to "Log In", login_path %></li>
+      <% end %>
+
       <li class="divider"></li>
       <li class="has-form">
         <form>
