Creating a customer reading list

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -37,7 +37,7 @@
             <%= link_to "Your Account", customer_path(current_user) %>
           <% end %>
           <ul class="dropdown">
-            <li><a href="#">Reading List</a></li>
+            <li><%= link_to "Reading List", reading_list_path %></a></li>
             <li class="has-dropdown"><a href="#" class="">Dropdown Level 1b</a>
 
               <ul class="dropdown">
