--- a/app/views/customers/reading_list.html.erb
+++ b/app/views/customers/reading_list.html.erb
@@ -1,3 +1,8 @@
 <h1>Reading List</h1>
 
-<%= @customer.reading_lists.inspect %>
+<ul>
+  <% @customer.reading_lists.each do |item| %>
+    <li><%= item.out_on_loan %></li>
+    <li><%= find_book(item.id).name %></li>
+  <% end %>
+</ul>
