Cleanup and prettification

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1269,4 +1269,14 @@ $topbar-bg: #212D48 !default;
 
 // $topbar-sticky-class: ".sticky";
 
+
+// Custom CSS
+
+.book_cover {
+  width: 150px;
+}
+
+
 @import 'foundation';
+
+
