--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,34 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name: </strong><%= @category.name %>
+  <strong><%= @category.name %></strong>
 </p>
 
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Book Name</th>
       <th>Author</th>
       <th>Description</th>
       <th>Rating</th>
       <th>Times rated</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% for book in @books %>
       <tr>
+        <td><%= image_tag("hobbit.jpg", class: "book_cover") %></td>
         <td><%= book.name %></td>
         <td><%= book.author %></td>
         <td><%= book.description %></td>
         <td><%= '%.1f' % book.rating %></td>
         <td><%= book.times_rated %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
