--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -19,7 +19,7 @@
   </thead>
 
   <tbody>
-    <% @customers.each do |customer| %>
+    <% for customer in @customers %>
       <tr>
         <td><%= customer.first_name %></td>
         <td><%= customer.last_name %></td>
@@ -38,6 +38,7 @@
   </tbody>
 </table>
 
+<%= will_paginate @customers %>
 <br>
 
 <%= link_to 'New Customer', new_customer_path %>
