--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,30 +3,26 @@
 <table class="span3">
   <thead>
     <tr>
+      <th>Image</th>
       <th>Book Name</th>
       <th>Author</th>
       <th>Description</th>
       <th>Rating</th>
       <th>Times rated</th>
       <th>Inventory Count</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% for book in @books %>
       <tr>
+        <td><%= image_tag("hobbit.jpg", class: "book_cover") %></td>
         <td><%= book.name %></td>
         <td><%= book.author %></td>
         <td><%= book.description %></td>
         <td><%= '%.1f' % book.rating %></td>
         <td><%= book.times_rated %></td>
         <td><%= book.inventories.count %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
