--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -14,8 +14,6 @@
       <li class="divider"></li>
       <li><%= link_to "Books", books_path %></li>
       <li class="divider"></li>
-      <li><%= link_to "Customers", customers_path %></li>
-      <li class="divider"></li>
       <li class="has-dropdown"><%= link_to "Categories", categories_path %>
 
         <ul class="dropdown" id="categories_menu">
@@ -38,32 +36,9 @@
           <% end %>
           <ul class="dropdown">
             <li><%= link_to "Reading List", reading_list_path %></a></li>
-            <li class="has-dropdown"><a href="#" class="">Dropdown Level 1b</a>
-
-              <ul class="dropdown">
-                <li><a href="#">Dropdown Level 2a</a></li>
-                <li><a href="#">Dropdown Level 2b</a></li>
-                <li class="has-dropdown"><a href="#">Dropdown Level 2c</a>
-
-                  <ul class="dropdown">
-                    <li><a href="#">Dropdown Level 3a</a></li>
-                    <li><a href="#">Dropdown Level 3b</a></li>
-                    <li><a href="#">Dropdown Level 3c</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown Level 2d</a></li>
-                <li><a href="#">Dropdown Level 2e</a></li>
-                <li><a href="#">Dropdown Level 2f</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Dropdown Level 1c</a></li>
+            <li><%= link_to "Customers", customers_path %></li>
             <li class="divider"></li>
-            <li><label>Dropdown Level 1 Label</label></li>
-            <li><a href="#">Dropdown Level 1d</a></li>
-            <li><a href="#">Dropdown Level 1e</a></li>
-            <li>
-              <%= link_to "Logout", logout_path %>
-            </li>
+            <li><%= link_to "Logout", logout_path %></li>
           </ul>
         </li>
 
@@ -73,6 +48,7 @@
         <li><%= link_to "Log In", login_path %></li>
       <% end %>
 
+      <!---
       <li class="divider"></li>
       <li class="has-form">
         <form>
@@ -86,10 +62,8 @@
           </div>
         </form>
       </li>
-      <li class="divider show-for-small"></li>
-      <li class="has-form">
-        <a class="button" href="#">Button!</a>
-      </li>
+      -->
+
     </ul>
   </section>
 </nav>
