Cleanup and prettification

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1286,6 +1286,14 @@ $topbar-bg: #212D48 !default;
   margin: 0px;
 }
 
+#books_page {
+  padding: 15px;
+}
+
+#category_books_page {
+  padding: 15px;
+}
+
 @import 'foundation';
 
 
