--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,29 +1,25 @@
-<p id="notice"><%= notice %></p>
-
-<p>
+<div id="category_books_page">
   <strong><%= @category.name %></strong>
-</p>
 
-<ul class="large-block-grid-4">
-  <% for book in @books %>
-    <li>
-      <%= image_tag("#{rand(0..30)}.jpg", class: "book_cover") %><br/>
-      <h3 class="book_title"><%= book.name %></h3>
-      <h5 class="author_name">By: <%= book.author %></h5>
-      <p><%= book.description[0..80] %></p>
-      <%= '%.1f' % book.rating %><br/>
-      <% if book.inventories.count > 0 %>
-        In Stock <br>
-      <% else %>
-        Out of Stock <br>
-      <% end %>
-      <%= link_to "Add to Queue", "#", class: "small success button" %>
-    </li>
-  <% end %>
-</ul>
+  <ul class="large-block-grid-4">
+    <% for book in @books %>
+      <li>
+        <%= image_tag("#{rand(0..30)}.jpg", class: "book_cover") %><br/>
+        <h3 class="book_title"><%= book.name %></h3>
+        <h5 class="author_name">By: <%= book.author %></h5>
+        <p><%= book.description[0..80] %></p>
+        <%= '%.1f' % book.rating %><br/>
+        <% if book.inventories.count > 0 %>
+          In Stock <br>
+        <% else %>
+          Out of Stock <br>
+        <% end %>
+        <%= link_to "Add to Reading List", "#", class: "small success button" %>
+      </li>
+    <% end %>
+  </ul>
 
-<br>
-<%= will_paginate @books %>
+  <br>
+  <%= will_paginate @books %>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+</div>
