--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -13,7 +13,11 @@
 
   <%= form_tag(reading_lists_path, method: "POST") do %>
     <%= hidden_field_tag(:book_id, book.id)  %>
-    <%= hidden_field_tag(:customer_id, current_customer.id) %>
+    <% if current_customer %>
+      <%= hidden_field_tag(:customer_id, current_customer.id ) %>
+    <% else %>
+      <%= hidden_field_tag(:customer_id, nil ) %>
+    <% end %>
     <%= submit_tag("Add to Reading List", class: "small success button") %>
   <% end %>
 </li>
