--- a/app/views/customers/reading_list.html.erb
+++ b/app/views/customers/reading_list.html.erb
@@ -1,20 +1,24 @@
 <div class="row">
-  <h3>Your Reading List</h3>
+  <h3>Your Reading List (<%= @books.count %>)</h3>
 </div>
 
 <% @books.each do |book| %>
   <div class="row">
-    <div class="large-2 columns small-3">
+    <div class="large-3 columns small-3">
       <%= image_tag("#{rand(0..30)}.jpg", class: "book_cover") %>
     </div>
-    <div class="large-10 columns">
+    <div class="large-9 columns">
+      <strong><%= book.name %></strong> by: <%= book.author %><br>
       <p>
-        <strong><%= book.name %></strong> by: <%= book.author %><br>
         <%= book.description %>
       </p>
       <ul class="inline-list">
-      <li><a href="">Reply</a></li>
-      <li><a href="">Share</a></li>
+        <li><%= link_to "Move Up", "#" %></li>
+        <li><%= link_to "Move Down", "#" %></li>
+        <li><a href="">Remove from list</a></li>
+        <li>Share on Facebook</li>
+        <li>Share on Goodreads</li>
+        <li>Share on Twitter</li>
       </ul>
     </div>
     <hr />
