--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing categories</h1>
+<h1>Categories</h1>
 
 <table>
   <thead>
@@ -24,7 +24,3 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
-
-
-<div id="derp">Derp:</div>
