--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,42 +1,43 @@
-<h1>Listing customers</h1>
+<div class="main">
+  <h3>Customers (<%= @customers.count %>)</h3>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Street address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zipcode</th>
-      <th>Account status</th>
-      <th>Rental plan</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% for customer in @customers %>
+  <table>
+    <thead>
       <tr>
-        <td><%= customer.first_name %></td>
-        <td><%= customer.last_name %></td>
-        <td><%= customer.email %></td>
-        <td><%= customer.street_address %></td>
-        <td><%= customer.city %></td>
-        <td><%= customer.state %></td>
-        <td><%= customer.zipcode %></td>
-        <td><%= customer.account_status %></td>
-        <td><%= customer.rental_plan %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Email</th>
+        <th>Street address</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Zipcode</th>
+        <th>Account status</th>
+        <th>Rental plan</th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= will_paginate @customers %>
-<br>
+    <tbody>
+      <% for customer in @customers %>
+        <tr>
+          <td><%= customer.first_name %></td>
+          <td><%= customer.last_name %></td>
+          <td><%= customer.email %></td>
+          <td><%= customer.street_address %></td>
+          <td><%= customer.city %></td>
+          <td><%= customer.state %></td>
+          <td><%= customer.zipcode %></td>
+          <td><%= customer.account_status %></td>
+          <td><%= customer.rental_plan %></td>
+          <td><%= link_to 'Show', customer %></td>
+          <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <%= will_paginate @customers %>
+  <br>
+</div>
 
-<%= link_to 'New Customer', new_customer_path %>
+
