--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,11 +1,8 @@
 <nav class="top-bar">
   <ul class="title-area">
-    <!-- Title Area -->
     <li class="name">
       <h1><%= link_to "2ndBookshelf", root_path %></a></h1>
     </li>
-    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
@@ -14,7 +11,7 @@
       <li class="divider"></li>
       <li><%= link_to "Books", books_path %></li>
       <li class="divider"></li>
-      <li class="has-dropdown"><%= link_to "Categories", categories_path %>
+      <li class="has-dropdown"><a href="#">Categories</a>
 
         <ul class="dropdown" id="categories_menu">
           <!-- Ajax Automatically adds categories here -->
