--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1304,6 +1304,16 @@ $topbar-bg: #212D48 !default;
   margin: auto;
 }
 
+.percent_80 {
+  width: 80%;
+  margin: auto;
+}
+
+.percent_20 {
+  width: 20%;
+  margin: auto;
+}
+
 @import 'foundation';
 
 
