--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,67 +1,58 @@
-<h1>New customer</h1>
+<div class="percent_50_center">
+  <%= form_for(@customer) do |f| %>
+    <% if @customer.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
 
+        <ul>
+        <% @customer.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-<%= form_for(@customer) do |f| %>
-  <% if @customer.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@customer.errors.count, "error") %> prohibited this customer from being saved:</h2>
+    <div class="row">
+      <div class="large-6 columns">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
 
-      <ul>
-      <% @customer.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <div class="large-6 columns">
+        <%= f.label :street_address %>
+        <%= f.text_field :street_address %>
+
+        <%= f.label :city %>
+        <%= f.text_field :city %>
+
+        <%= f.label :state %>
+        <%= f.text_field :state %>
+
+        <%= f.label :zipcode %>
+        <%= f.text_field :zipcode %>
+
+        <%= f.label :rental_plan %>
+        <%= f.radio_button :rental_plan, 2 %> Two books.
+        <%= f.radio_button :rental_plan, 3 %> Three books.
+        <%= f.radio_button :rental_plan, 4 %> Four books.
+
+        <br>
+
+        <%= f.submit "Join", class: "button success" %>
+      </div>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="field">
-    <%= f.label :street_address %><br>
-    <%= f.text_field :street_address %>
-  </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :zipcode %><br>
-    <%= f.text_field :zipcode %>
-  </div>
-  <div class="field">
-    <%= f.label :account_status %><br>
-    <%= f.text_field :account_status %>
-  </div>
-  <div class="field">
-    <%= f.label :rental_plan %><br>
-    <%= f.text_field :rental_plan %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
 
 
-<%= link_to 'Back', customers_path %>
