--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -11,13 +11,13 @@
     Out of Stock <br>
   <% end %>
 
-  <%= form_tag(reading_lists_path, method: "POST", remote: true) do %>
+  <%= form_tag(reading_lists_path, method: "POST", class: "add_to_reading_list") do %>
     <%= hidden_field_tag(:book_id, book.id)  %>
     <% if current_customer %>
       <%= hidden_field_tag(:customer_id, current_customer.id ) %>
     <% else %>
       <%= hidden_field_tag(:customer_id, nil ) %>
     <% end %>
-    <%= submit_tag("Add to Reading List", class: "small success button add_to_reading_list") %>
+    <%= submit_tag("Add to Reading List", class: "small success button") %>
   <% end %>
 </li>
