AJAXing the add book to reading list button

--- a/app/views/customers/reading_list.html.erb
+++ b/app/views/customers/reading_list.html.erb
@@ -13,12 +13,7 @@
         <%= book.description[0..600] %>
       </p>
       <ul class="inline-list">
-        <li><%= link_to "Move Up", "#" %></li>
-        <li><%= link_to "Move Down", "#" %></li>
-        <li><a href="">Remove from list</a></li>
-        <li>Share on Facebook</li>
-        <li>Share on Goodreads</li>
-        <li>Share on Twitter</li>
+        <li><%= link_to "Remove from list", "#" %></a></li>
       </ul>
     </div>
     <hr />
