Created Plans and add a plan_id to customers

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -43,7 +43,8 @@
         <%= f.text_field :zipcode %>
 
         <%= f.label :rental_plan %>
-        <%= f.radio_button :rental_plan, 2 %> Two books.
+        <%= f.radio_button :rental_plan, 1 %> One book.
+        <%= f.radio_button :rental_plan, 2 %> Two books.<br>
         <%= f.radio_button :rental_plan, 3 %> Three books.
         <%= f.radio_button :rental_plan, 4 %> Four books.
 
