Updated customers and plans

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -42,6 +42,12 @@
         <%= f.label :zipcode %>
         <%= f.text_field :zipcode %>
 
+        <%= f.label :plan_id %>
+        <%= f.radio_button :plan_id, 1 %> One book.
+        <%= f.radio_button :plan_id, 2 %> Two books.<br>
+        <%= f.radio_button :plan_id, 3 %> Three books.
+        <%= f.radio_button :plan_id, 4 %> Four books.
+
         <br>
 
         <%= f.submit "Join", class: "button success" %>
