--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -11,17 +11,31 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :plan_id %><br>
-    <%= f.number_field :plan_id %>
-  </div>
-  <div class="field">
-    <%= f.label :customer_id %><br>
-    <%= f.number_field :customer_id %>
-  </div>
-  <div class="field">
-    <%= f.label :stripe_card_token %><br>
-    <%= f.text_field :stripe_card_token %>
+  <%= f.hidden_field :plan_id, value: current_customer.plan_id %>
+  <%= f.hidden_field :customer_id, value: current_customer.id %>
+  <%= f.hidden_field :stripe_card_token %>
+
+  <% if @subscription.stripe_card_token %>
+    Credit card has been provided.
+  <% else %>
+    <div class="field">
+        <%= label_tag :card_number, "Credit Card Number " %>
+        <%= text_field_tag :card_number, nil, name: nil %>
+    </div>
+    <div class="field">
+        <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+        <%= text_field_tag :card_code, nil, name: nil %>
+    </div>
+    <div class="field">
+      <%= label_tag :card_month, "Card Expiration" %>
+      <%= select_month nil, {add_month_numbers_true: true}, {name: nil, id: "card_month"}%>
+      <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year+15}, {name: nil, id: "card_year"}%>
+    </div>
+  <% end %>
+  <div id="stripe_error">
+    <noscript>
+      Javascript is required for this form and is disabled. You must enable it to continue.
+    </noscript>
   </div>
   <div class="actions">
     <%= f.submit %>
