Cleaning up the app

--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -33,6 +33,7 @@
             <%= link_to "Your Account", customer_path(current_user) %>
           <% end %>
           <ul class="dropdown">
+            <li><%= link_to "Your Account", customer_path(current_user) %></li>
             <li><%= link_to "Customers", customers_path %></li>
             <li class="divider"></li>
             <li><%= link_to "Logout", logout_path %></li>
