Cleaning up the app

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,5 +8,5 @@
   </ul>
 
   <br>
-  <%= will_paginate @books %>
+  <h3><%= will_paginate @books, style: "width: 480px; margin: auto;" %></h3>
 </div>
