--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,6 +8,6 @@
   </ul>
 
   <br>
-  <%= will_paginate @books %>
+  <h3><%= will_paginate @books, style: "width: 480px; margin: auto;" %></h3>
 
 </div>
