--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,5 +8,5 @@
   </ul>
 
   <br>
-  <h3><%= will_paginate @books, style: "width: 480px; margin: auto;" %></h3>
+  <h3 style="text-align: center;"><%= will_paginate @books %></h3>
 </div>
