Adding authentication to the new admins

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1314,6 +1314,11 @@ $topbar-bg: #212D48 !default;
   margin: auto;
 }
 
+.percent_30_center {
+  width: 30%;
+  margin: auto;
+}
+
 .percent_50 {
   width: 50%;
 }
