--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -24,6 +24,9 @@
     <ul class="right">
       <li class="divider hide-for-small"></li>
 
+      <% if true #current_admin %>
+        <li><%= link_to "Admins", admins_path %></a></li>
+      <% end %>
       <% if current_user %>
         <li><%= link_to "Reading List", reading_list_path %></a></li>
         <li  class="has-dropdown">
