--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1323,6 +1323,10 @@ $topbar-bg: #212D48 !default;
   width: 50%;
 }
 
+.book_description{
+  height: 300px;
+}
+
 .float_right {
   float: right;
 }
