--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New book</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', books_path %>
+<div class="percent_50_center">
+  <h1>New book</h1>
+  <%= render 'form' %>
+</div>
