--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -23,14 +23,20 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="divider hide-for-small"></li>
-
       <% if current_admin %>
-        <li><%= link_to "Admin", admins_path %></a></li>
+        <li class="has-dropdown"><%= link_to "Admin", admins_path %>
+          <ul class="dropdown">
+            <li><%= link_to "Create Book", new_book_path %></li>
+          </ul>
+        </li>
+        <li class="divider"></li>
         <li><%= link_to "Customers", customers_path %></li>
       <% end %>
       <% if current_user %>
+        <li class="divider"></li>
         <li><%= link_to "Reading List", reading_list_path %></a></li>
-        <li  class="has-dropdown">
+        <li class="divider"></li>
+        <li class="has-dropdown">
           <% if current_user.first_name != "" %>
             <%= link_to current_user.first_name, customer_path(current_user) %>
           <% else %>
