--- a/app/views/inventories/new.html.erb
+++ b/app/views/inventories/new.html.erb
@@ -1,5 +1,24 @@
 <h1>New inventory</h1>
 
-<%= render 'form' %>
+<%= form_for(@inventory) do |f| %>
+  <% if @inventory.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@inventory.errors.count, "error") %> prohibited this inventory from being saved:</h2>
+
+      <ul>
+      <% @inventory.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= f.hidden_field :book_id, value: params["format"] %>
+
+  <%= f.label :condition %><br>
+  <%= f.text_field :condition %>
+
+  <%= f.submit %>
+<% end %>
 
 <%= link_to 'Back', inventories_path %>
