--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -28,6 +28,7 @@
           <ul class="dropdown">
             <li><%= link_to "Create a new Book", new_book_path %></li>
             <li><%= link_to "All Books", admin_books_path %></li>
+            <li><%= link_to "Book Checkout", book_checkout_path %></li>
           </ul>
         </li>
         <li class="divider"></li>
